<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cars"
        android:icon="@drawable/ic_cars"
        android:orderInCategory="100"
        android:title="@string/action_cars"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_motorcycles"
        android:icon="@drawable/ic_motorcycles"
        android:orderInCategory="100"
        android:title="@string/action_motorcycles"
        app:showAsAction="always" />
</menu>
