<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailsActivity"
    tools:showIn="@layout/activity_details">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="@dimen/default_margin_padding">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_car"
            style="@style/AppTheme.DetailsRoundedImageView"
            android:layout_width="190dp"
            android:layout_height="230dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:riv_border_color="@android:color/transparent"
            app:riv_border_width="2dp"
            app:riv_corner_radius="5dp"
            app:riv_mutate_background="true"
            app:riv_oval="false"
            app:riv_tile_mode="clamp" />

        <View
            android:id="@+id/v_vertical_line"
            android:layout_width="0.8dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_car"
            android:layout_alignTop="@+id/iv_car"
            android:layout_marginEnd="@dimen/default_margin_padding"
            android:layout_marginLeft="@dimen/default_margin_padding"
            android:layout_marginRight="@dimen/default_margin_padding"
            android:layout_marginStart="@dimen/default_margin_padding"
            android:layout_toEndOf="@+id/iv_car"
            android:layout_toRightOf="@+id/iv_car"
            android:background="@color/colorLightGrey" />

        <TextView
            android:id="@+id/tv_short_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/v_vertical_line"
            android:layout_toEndOf="@+id/v_vertical_line"
            android:layout_toRightOf="@+id/v_vertical_line"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkGrey"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_year_prod_model"
            style="@style/AppTheme.DetailsInfoIcon"
            android:layout_alignLeft="@+id/tv_short_description"
            android:layout_alignStart="@+id/tv_short_description"
            android:layout_below="@+id/tv_short_description"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/iv_desc_year_prod_model"
            android:src="@drawable/ic_year_prod_model" />

        <TextView
            android:id="@+id/tv_year_prod_model"
            style="@style/AppTheme.DetailsTextIcon"
            android:layout_alignTop="@+id/iv_year_prod_model"
            android:layout_toEndOf="@+id/iv_year_prod_model"
            android:layout_toRightOf="@+id/iv_year_prod_model" />

        <ImageView
            android:id="@+id/iv_kilometers"
            style="@style/AppTheme.DetailsInfoIcon"
            android:layout_alignLeft="@+id/tv_short_description"
            android:layout_alignStart="@+id/tv_short_description"
            android:layout_below="@+id/iv_year_prod_model"
            android:contentDescription="@string/iv_desc_kilometers"
            android:src="@drawable/ic_kilometers" />

        <TextView
            android:id="@+id/tv_kilometers"
            style="@style/AppTheme.DetailsTextIcon"
            android:layout_alignTop="@+id/iv_kilometers"
            android:layout_toEndOf="@+id/iv_kilometers"
            android:layout_toRightOf="@+id/iv_kilometers" />

        <ImageView
            android:id="@+id/iv_car_changes"
            style="@style/AppTheme.DetailsInfoIcon"
            android:layout_alignLeft="@+id/tv_short_description"
            android:layout_alignStart="@+id/tv_short_description"
            android:layout_below="@+id/iv_kilometers"
            android:contentDescription="@string/iv_desc_car_changes"
            android:src="@drawable/ic_car_changes" />

        <TextView
            android:id="@+id/tv_car_changes"
            style="@style/AppTheme.DetailsTextIcon"
            android:layout_alignTop="@+id/iv_car_changes"
            android:layout_toEndOf="@+id/iv_car_changes"
            android:layout_toRightOf="@+id/iv_car_changes" />

        <View
            android:id="@+id/h_vertical_line_01"
            android:layout_width="wrap_content"
            android:layout_height="0.8dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/iv_car_changes"
            android:layout_marginBottom="@dimen/default_margin_padding"
            android:layout_marginTop="@dimen/default_margin_padding"
            android:layout_toEndOf="@+id/v_vertical_line"
            android:layout_toRightOf="@+id/v_vertical_line"
            android:background="@color/colorLightGrey" />

        <ImageView
            android:id="@+id/iv_place"
            style="@style/AppTheme.DetailsInfoIcon"
            android:layout_below="@+id/h_vertical_line_01"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/v_vertical_line"
            android:layout_toRightOf="@+id/v_vertical_line"
            android:contentDescription="@string/iv_desc_place"
            android:src="@drawable/ic_place" />

        <TextView
            android:id="@+id/tv_place"
            style="@style/AppTheme.DetailsTextIcon"
            android:layout_alignTop="@+id/iv_place"
            android:layout_toEndOf="@+id/iv_place"
            android:layout_toRightOf="@+id/iv_place" />

        <TextView
            android:id="@+id/tv_place_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_place"
            android:layout_alignStart="@+id/tv_place"
            android:layout_below="@+id/tv_place"
            android:textColor="@color/colorSubText"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_phone"
            style="@style/AppTheme.DetailsTextIcon"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_place_full"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/v_vertical_line"
            android:layout_toRightOf="@+id/v_vertical_line"
            android:gravity="center"
            android:onClick="callSeller"
            android:textColor="@color/colorLink" />

        <View
            android:id="@+id/h_vertical_line_02"
            android:layout_width="wrap_content"
            android:layout_height="0.8dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/v_vertical_line"
            android:layout_marginLeft="@dimen/default_margin_padding"
            android:layout_marginStart="@dimen/default_margin_padding"
            android:layout_marginTop="@dimen/default_margin_padding"
            android:layout_toEndOf="@+id/iv_car"
            android:layout_toRightOf="@+id/iv_car"
            android:background="@color/colorLightGrey" />

        <LinearLayout
            android:id="@+id/ll_album_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/v_vertical_line"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/v_vertical_line"
            android:layout_below="@+id/iv_car"
            android:layout_marginEnd="@dimen/default_margin_padding"
            android:layout_marginRight="@dimen/default_margin_padding"
            android:layout_marginTop="@dimen/default_margin_padding"
            android:background="@drawable/item_car_background"
            android:orientation="horizontal"
            android:padding="6dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_car_thumb_01"
                style="@style/AppTheme.DetailsRoundedImageView"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                app:riv_border_color="@android:color/transparent"
                app:riv_border_width="2dp"
                app:riv_corner_radius="5dp"
                app:riv_mutate_background="true"
                app:riv_oval="false"
                app:riv_tile_mode="clamp" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_car_thumb_02"
                style="@style/AppTheme.DetailsRoundedImageView"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                app:riv_border_color="@android:color/transparent"
                app:riv_border_width="2dp"
                app:riv_corner_radius="5dp"
                app:riv_mutate_background="true"
                app:riv_oval="false"
                app:riv_tile_mode="clamp" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_car_thumb_03"
                style="@style/AppTheme.DetailsRoundedImageView"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                app:riv_border_color="@android:color/transparent"
                app:riv_border_width="2dp"
                app:riv_corner_radius="5dp"
                app:riv_mutate_background="true"
                app:riv_oval="false"
                app:riv_tile_mode="clamp" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_car_thumb_04"
                style="@style/AppTheme.DetailsRoundedImageView"
                app:riv_border_color="@android:color/transparent"
                app:riv_border_width="2dp"
                app:riv_corner_radius="5dp"
                app:riv_mutate_background="true"
                app:riv_oval="false"
                app:riv_tile_mode="clamp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ll_album_container"
            android:layout_alignEnd="@+id/h_vertical_line_02"
            android:layout_alignRight="@+id/h_vertical_line_02"
            android:layout_below="@+id/h_vertical_line_02"
            android:layout_marginTop="@dimen/default_margin_padding"
            android:layout_toEndOf="@+id/ll_album_container"
            android:layout_toRightOf="@+id/ll_album_container"
            android:background="@drawable/price_background"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_circle_01"
            style="@style/AppTheme.DetailsCircleIcon"
            android:layout_below="@+id/ll_album_container" />

        <View
            android:id="@+id/h_vertical_line_03"
            style="@style/AppTheme.DetailsHorizontalLine"
            android:layout_alignLeft="@+id/iv_circle_01"
            android:layout_alignStart="@+id/iv_circle_01"
            android:layout_alignTop="@+id/iv_circle_01"
            android:layout_toLeftOf="@+id/tv_more_info"
            android:layout_toStartOf="@+id/tv_more_info" />

        <TextView
            android:id="@+id/tv_more_info"
            style="@style/AppTheme.DetailsTitleInfo"
            android:layout_alignTop="@+id/iv_circle_01"
            android:text="@string/label_more_info" />

        <LinearLayout
            android:id="@+id/ll_container_more_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/iv_circle_01"
            android:layout_marginTop="14dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.DetailsLabelInfo"
                    android:text="@string/label_color" />

                <TextView
                    android:id="@+id/tv_color_value"
                    style="@style/AppTheme.DetailsTextInfo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.DetailsLabelInfo"
                    android:text="@string/label_bodywork" />

                <TextView
                    android:id="@+id/tv_bodywork_value"
                    style="@style/AppTheme.DetailsTextInfo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.DetailsLabelInfo"
                    android:text="@string/label_plate" />

                <TextView
                    android:id="@+id/tv_plate_value"
                    style="@style/AppTheme.DetailsTextInfo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.DetailsLabelInfo"
                    android:text="@string/label_gas" />

                <TextView
                    android:id="@+id/tv_gas_value"
                    style="@style/AppTheme.DetailsTextInfo" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_circle_02"
            style="@style/AppTheme.DetailsCircleIcon"
            android:layout_below="@+id/ll_container_more_info" />

        <View
            android:id="@+id/h_vertical_line_04"
            style="@style/AppTheme.DetailsHorizontalLine"
            android:layout_alignLeft="@+id/iv_circle_02"
            android:layout_alignStart="@+id/iv_circle_02"
            android:layout_alignTop="@+id/iv_circle_02"
            android:layout_toLeftOf="@+id/tv_seller_obs"
            android:layout_toStartOf="@+id/tv_seller_obs" />

        <TextView
            android:id="@+id/tv_seller_obs"
            style="@style/AppTheme.DetailsTitleInfo"
            android:layout_alignTop="@+id/iv_circle_02"
            android:text="@string/label_seller_obs" />

        <TextView
            android:id="@+id/tv_full_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/iv_circle_02"
            android:layout_marginTop="14dp"
            android:textColor="@color/colorDarkGrey"
            android:textSize="14sp" />

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>