<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_car_background"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:paddingBottom="0dp"
    android:paddingLeft="4dp"
    android:paddingRight="0dp"
    android:paddingTop="4dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_car_thumb"
        android:layout_width="118dp"
        android:layout_height="118dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="centerCrop"
        app:riv_border_color="@android:color/transparent"
        app:riv_border_width="2dp"
        app:riv_corner_radius="5dp"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:riv_tile_mode="clamp" />

    <TextView
        android:id="@+id/tv_name_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/iv_car_thumb"
        android:layout_toRightOf="@+id/iv_car_thumb"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/tv_short_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_name_brand"
        android:layout_alignStart="@+id/tv_name_brand"
        android:layout_below="@+id/tv_name_brand"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAllCaps="true"
        android:textColor="@color/colorSubText"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/iv_year_prod_model"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/tv_short_description"
        android:layout_alignStart="@+id/tv_short_description"
        android:layout_below="@+id/tv_short_description"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/iv_desc_year_prod_model"
        android:scaleType="center"
        android:src="@drawable/ic_year_prod_model"
        android:tint="@color/colorItemNormal" />

    <TextView
        android:id="@+id/tv_year_prod_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_year_prod_model"
        android:layout_toEndOf="@+id/iv_year_prod_model"
        android:layout_toRightOf="@+id/iv_year_prod_model"
        android:textColor="@color/colorItemNormal"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/iv_kilometers"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/tv_short_description"
        android:layout_alignStart="@+id/tv_short_description"
        android:layout_below="@+id/iv_year_prod_model"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/iv_desc_kilometers"
        android:scaleType="center"
        android:src="@drawable/ic_kilometers"
        android:tint="@color/colorItemNormal" />

    <TextView
        android:id="@+id/tv_kilometers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_kilometers"
        android:layout_toEndOf="@+id/iv_kilometers"
        android:layout_toRightOf="@+id/iv_kilometers"
        android:textColor="@color/colorItemNormal"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/iv_car_changes"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/tv_short_description"
        android:layout_alignStart="@+id/tv_short_description"
        android:layout_below="@+id/iv_kilometers"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/iv_desc_car_changes"
        android:scaleType="center"
        android:src="@drawable/ic_car_changes"
        android:tint="@color/colorItemNormal" />

    <TextView
        android:id="@+id/tv_car_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_car_changes"
        android:layout_toEndOf="@+id/iv_car_changes"
        android:layout_toRightOf="@+id/iv_car_changes"
        android:textColor="@color/colorItemNormal"
        android:textSize="16sp" />

    <View
        android:id="@+id/v_vertical_line"
        android:layout_width="0.8dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_car_changes"
        android:layout_alignTop="@+id/iv_year_prod_model"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/tv_year_prod_model"
        android:layout_toRightOf="@+id/tv_year_prod_model"
        android:background="@color/colorLightGrey" />

    <ImageView
        android:id="@+id/iv_place"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/v_vertical_line"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_toEndOf="@+id/v_vertical_line"
        android:layout_toRightOf="@+id/v_vertical_line"
        android:contentDescription="@string/iv_desc_place"
        android:scaleType="center"
        android:src="@drawable/ic_place"
        android:tint="@color/colorItemNormal" />

    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_place"
        android:layout_toEndOf="@+id/iv_place"
        android:layout_toRightOf="@+id/iv_place"
        android:textColor="@color/colorItemNormal"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_place_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_place"
        android:layout_alignStart="@+id/tv_place"
        android:layout_below="@+id/tv_place"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/colorSubText"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="0dp"
        android:background="@drawable/item_price_background"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</RelativeLayout>